# django-default-project

./: .editorconfig  .env  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Pipfile  README.md  TODO.md  fabfile.py  manage.py  pyproject.toml  requirements.txt  urls.py  wsgi.py
.beads/: config.yaml  metadata.json
.beads/hooks/: pre-commit
.claude/: settings.json
assets/css/: materialdesignicons.min.css  vuetify.min.css
assets/js/: BaseApp.js  axios.min.js  bootstrap.js  store.js  vue.global.js
assets/js/components/: UserChange.js
assets/js/pages/: index.js
assets/sass/: admin.sass  styles.sass
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
misc/: filter_outdated.py  setup_repo.sh
my_secrets/: definitions.py
sample_app/: apps.py  views.py
settings/: __init__.py  andy.py  asgi.py  common.py  dev.py  urls.py  wsgi.py
settings/deployment/: project.nginx  project.sh  project.yml
templates/: 500.pug  base.pug  index.pug
templates/admin/: base.html  base_site.html
templates/components/: UserChange.pug
templates/loginas/: change_form.html
testerei/: apps.py  views.py
users/: admin.py  models.py  serializers.py  tests.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20180406_1557.py  0003_alter_user_options_alter_user_managers_and_more.py  0004_alter_user_id.py
utils/: __init__.py  cron.py  models.py  tasks.py  tests.py  views.py
